Fixed overall layout to remove random whitespace

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -25,7 +25,3 @@ mat-expansion-panel {
   margin-top: 3px;
   min-width: 300px;
 }
-
-.left {
-  padding-left: 1vw;
-}
